package.json update

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
 	"name": "crwn-clothing-server",
 	"version": "1.0.0",
 	"engines": {
-		"node": "14.7.0",
-		"npm": "6.4.1"
+		"node": "14.7.0"
 	},
 	"scripts": {
 		"client": "cd client && npm start",
