--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "crwn-clothing-server",
 	"version": "1.0.0",
 	"engines": {
-		"node": "14.7.0"
+		"node": "14.7.0",
+		"npm": "6.14.7"
 	},
 	"scripts": {
 		"client": "cd client && npm start",
